Add core and purple directories to Dockerfiles; update agentbeats results and logs with refined metrics and dialogue

--- a/infra/Dockerfile.green
+++ b/infra/Dockerfile.green
@@ -13,6 +13,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY benchmark/ ./benchmark/
 COPY agents/ ./agents/
+COPY core/ ./core/
 COPY scorer/ ./scorer/
 COPY scripts/ ./scripts/
 COPY configs/ ./configs/
