--- a/infra/Dockerfile.purple
+++ b/infra/Dockerfile.purple
@@ -12,6 +12,7 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY scripts/ ./scripts/
+COPY purple/ ./purple/
 COPY agents/ ./agents/
 COPY benchmark/ ./benchmark/
 COPY configs/ ./configs/
